<resources>
    <string name="app_name">EpSlaughterHouse</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="receive">Receive</string>
    <string name="hang">Hang</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="location_name">Location Name</string>
    <string name="document_date">Document Date</string>
    <string name="document_number">Document Number</string>
    <string name="document_type">Document Type</string>
    <string name="auto_update_is_local">Auto Update With Local Url</string>
    <string name="truck_code">Truck Code</string>
    <string name="catch_bta_code">Catch BTA Code</string>
    <string name="doc_type_ift">IFT (Inter Farm Transfer)</string>
    <string name="doc_type_pl">PL (Picking List)</string>
    <string name="grade_kfc">KFC</string>
    <string name="grade_a">Grade A</string>
    <string name="grade_b">Grade B</string>
    <string name="type">Type</string>
    <string name="start">Start</string>
    <string name="remark">Remark</string>
    <string name="weight_kg">Weight(KG)</string>
    <string name="house">House</string>
    <string name="house_code">House Code</string>
    <string name="wgt">Wgt</string>
    <string name="qty">Qty</string>
    <string name="mortality_weight_kg">Mortality Weight(KG)</string>
    <string name="mortality_quantity">Mortality Quantity</string>
    <string name="quantity">Quantity</string>
    <string name="cage">Cage</string>
    <string name="cover">Cover</string>
    <string name="total">Total</string>
    <string name="next2">Next (Terus)</string>
    <string name="weight_scale">Weight Scale</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="save">Save</string>
    <string name="insert">Insert</string>
    <string name="cancel">Cancel</string>
    <string name="cancel2">Cancel (Balik)</string>
    <string name="total_weight">Total Weight</string>
    <string name="total_farm_qty">Total Farm Qty</string>
    <string name="total_farm_cover">Total Farm Cover</string>
    <string name="total_farm_cage">Total Farm Cage</string>
    <string name="total_quantity">Total Quantity</string>
    <string name="total_cover">Total Cover</string>
    <string name="total_cage">Total Cage</string>
    <string name="error">Error</string>
    <string name="info">Info</string>
    <string name="success">Success</string>
    <string name="last_synchronize">Last Synchronize</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="history">History</string>
    <string name="doc_no">Doc No</string>
    <string name="date">Date</string>
    <string name="setting">Setting</string>
    <string name="truck">Truck</string>
    <string name="delete">Delete</string>
    <string name="upload">Upload</string>
    <string name="retrieve_doc">Retrieve Document</string>
    <string name="retrieve_location">Retrieve Location</string>
    <string name="mortality">Mortality</string>
    <string name="print">Print</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="database">Database</string>
    <string name="update">Update</string>
    <string name="session">Session</string>
    <string name="action">Action</string>
    <string name="logout">Logout</string>
    <string name="get_doc">Get Document</string>
    <string name="local2">Local (Connect Office Wi-Fi)</string>
    <string name="re_sync_all">Re-sync All</string>
    <string name="update_all">Update All</string>
    <string name="house_keeping">House Keeping</string>
    <string name="update_app_ver">Update App Version</string>
    <string name="last_history_log">Last History Log</string>
    <string name="document_list">Document List</string>
    <string name="slaughter_today">Slaughter Today</string>
    <string name="network_printer_setting">Network Printer Setting</string>
    <string name="printer_ip_example">Printer IP Address (Example: 192.168.100.100)</string>
    <string name="printer_ip_port">Printer Port</string>
    <string name="test_print">Test Printer</string>

    <string name="SHORT_NUMBER">#</string>
    <string name="SHORT_HOUSE">Hse</string>
    <string name="SHORT_WEIGHT">Wgt</string>
    <string name="EMPTY_STRING">\u0020</string>
    <string name="DEFAULT_UPLOAD">0</string>

    <string name="bt_status">Status : %1$s</string>
    <string name="bt_name">Name : %1$s</string>
    <string name="bt_address">Address : %1$s</string>
    <string name="login_error_desc">Login Error (%1$s)</string>
    <string name="error_desc">Error : %1$s</string>
    <string name="upload_log_desc">%1$d record(s) uploaded</string>
    <string name="house_desc">House : %1$d</string>

    <string name="dialog_title_error">Error</string>
    <string name="dialog_title_success">Success</string>
    <string name="dialog_title_delete_receive">Delete Receive?</string>
    <string name="dialog_title_company">Please Select Company</string>
    <string name="dialog_title_bluetooth_device">Please Select Bluetooth Device</string>
    <string name="dialog_title_location">Please Select Location</string>
    <string name="dialog_title_no_company">Empty Company Listing</string>
    <string name="dialog_title_no_location">Empty Location Listing</string>
    <string name="dialog_title_mortality2">Please enter mortality (Ayam mati)</string>
    <string name="dialog_title_mortality_detail">Mortality Detail</string>
    <string name="dialog_title_logout">Are you sure to logout?</string>

    <string name="dialog_error_msg_got_un_upload">Got un-upload data, please upload before logout.</string>
    <string name="dialog_error_msg_retrieve_company">Error retrieve company data.</string>
    <string name="dialog_error_msg_retrieve_location">Error retrieve location data.</string>
    <string name="dialog_error_msg_no_data_upload">No data to upload.</string>
    <string name="dialog_error_msg_auth_fail">User auth failed.</string>
    <string name="dialog_error_msg_login_email">Please login google account.</string>
    <string name="dialog_error_msg_no_username">Please enter username.</string>
    <string name="dialog_error_msg_no_password">Please enter password.</string>
    <string name="dialog_error_msg_no_detail">Please enter detail.</string>
    <string name="dialog_confirm_msg_delete_receive">Unable to undo after delete</string>
    <string name="dialog_confirm_msg_logout">Internet connection is required to login.</string>
    <string name="dialog_success_msg_retrieve">Retrieve complete.</string>
    <string name="dialog_success_msg_retrieve_location">Retrieve location complete.</string>
    <string name="dialog_success_msg_upload">Upload complete.</string>
    <string name="dialog_success_delete">Deleted…</string>
    <string name="dialog_success_backup">Backup database complete, please find in gallery.</string>
    <string name="dialog_success_save_network_printer">Network printer ip and port saved.</string>

    <string name="dialog_positive_button_text">OK</string>
    <string name="dialog_negative_button_text">Cancel</string>

    <string name="hint_swipe_to_delete">Swipe to delete</string>

    <string name="pending_not_yet_upload_data">Pending not yet upload data</string>

    <string name="notification_main_channel_name">Primary</string>
    <string name="notification_msg_upload_initial">Prepare upload to server…</string>
    <string name="notification_msg_upload_complete">Upload complete.</string>
    <string name="notification_msg_upload_error">Upload error. %1$s</string>

    <string name="notification_msg_get_doc_initial">Prepare to get document…</string>
    <string name="notification_msg_get_doc_complete">Get document complete.</string>
    <string name="notification_msg_get_doc_error">Get document error. %1$s</string>
    <string name="backup_database">Backup Database</string>

</resources>
