<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:id="@+id/tv_no"
        style="@style/TableTitleTextViewStyle"
        android:text="@string/SHORT_NUMBER"
        app:layout_constraintEnd_toStartOf="@id/tv_company"
        app:layout_constraintHorizontal_weight="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_company"
        style="@style/TableTitleTextViewStyle"
        android:text="@string/company"
        app:layout_constraintEnd_toStartOf="@id/tv_location"
        app:layout_constraintHorizontal_weight="0.8"
        app:layout_constraintStart_toEndOf="@id/tv_no"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_location"
        style="@style/TableTitleTextViewStyle"
        android:text="@string/location"
        app:layout_constraintEnd_toStartOf="@id/tv_doc_date"
        app:layout_constraintHorizontal_weight="0.8"
        app:layout_constraintStart_toEndOf="@id/tv_company"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_doc_date"
        style="@style/TableTitleTextViewStyle"
        android:text="@string/date"
        app:layout_constraintEnd_toStartOf="@id/tv_doc_no"
        app:layout_constraintHorizontal_weight="0.8"
        app:layout_constraintStart_toEndOf="@id/tv_location"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_doc_no"
        style="@style/TableTitleTextViewStyle"
        android:text="@string/doc_no"
        app:layout_constraintEnd_toStartOf="@id/tv_type"
        app:layout_constraintHorizontal_weight="0.8"
        app:layout_constraintStart_toEndOf="@id/tv_doc_date"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_type"
        style="@style/TableTitleTextViewStyle"
        android:text="@string/type"
        app:layout_constraintEnd_toStartOf="@id/tv_upload"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintStart_toEndOf="@id/tv_doc_no"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_upload"
        style="@style/TableTitleTextViewStyle"
        android:text="@string/upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintStart_toEndOf="@id/tv_type"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>