<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/dialog_title_mortality_detail"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/tv_title_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_no"
        style="@style/TableTitleTextViewStyle"
        android:text="@string/SHORT_NUMBER"
        app:layout_constraintEnd_toStartOf="@id/tv_title_weight"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_title_weight"
        style="@style/TableTitleTextViewStyle"
        android:text="@string/weight_kg"
        app:layout_constraintBottom_toBottomOf="@id/tv_title_no"
        app:layout_constraintEnd_toStartOf="@id/tv_title_qty"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/tv_title_no"
        app:layout_constraintTop_toTopOf="@id/tv_title_no" />

    <TextView
        android:id="@+id/tv_title_qty"
        style="@style/TableTitleTextViewStyle"
        android:text="@string/quantity"
        app:layout_constraintBottom_toBottomOf="@id/tv_title_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/tv_title_weight"
        app:layout_constraintTop_toTopOf="@id/tv_title_weight" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_weight" />

</androidx.constraintlayout.widget.ConstraintLayout>